panel bear analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
         </style>
+        <script async src="https://cdn.panelbear.com/analytics.js?site=HS2tmiOXqOf"></script>
+        <script>
+            window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
+            panelbear('config', { site: 'HS2tmiOXqOf' });
+        </script>
     </head>
     <body>
         <div id="header">
