--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <img src="images/hh.png">
                     </div>
                     <div class="meta">
-                        <h2>Ho Healthcare • WIP -></h2>
+                        <h2>Ho Healthcare -></h2>
                         <p>A women's health-tech company that offers diagnostic tests that target acne, irregular periods, fertility, PCOS, anxiety, weight fluctuation, and stress.</p>
                     </div>
                 </a>
