what's new link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </a>
             </div>
             <div class="section bg project">
-                <a href="">
+                <a href="https://read.cv/dipalie/cMfxSAtRIyVpuOp7whTa">
                     <div class="image">
                         <img src="images/whatsnew/whatsnew.png">
                     </div>
