--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="mailto:dipalibajaj9@gmail.com">Say hello -></a>
         </div>
       </div>
-      <div id="product-component-1663164719251"></div>
+      <div id="product-component-1663165353890"></div>
       <script type="text/javascript">
         /*<![CDATA[*/
         (function () {
@@ -82,7 +82,7 @@
               ui.createComponent("product", {
                 id: "7668226654456",
                 node: document.getElementById(
-                  "product-component-1663164719251"
+                  "product-component-1663165353890"
                 ),
                 moneyFormat: "Rs.%20%7B%7Bamount%7D%7D",
                 options: {
@@ -107,8 +107,9 @@
                         "border-radius": "6px",
                       },
                     },
+                    buttonDestination: "checkout",
                     text: {
-                      button: "Add to cart",
+                      button: "Buy now",
                     },
                   },
                   productSet: {
